--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "build": "next build",
+    "db:drop" : "prisma migrate reset",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:seed": "node populate.js",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
