--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:drop" : "prisma migrate reset",
+    "db:drop": "prisma migrate reset",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "node populate.js",
+    "db:seed": "node seed.ts",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
     "@clerk/nextjs": "^5.3.3",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
@@ -26,10 +28,12 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.428.0",
     "next": "^14.2.4",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.3",
     "zod": "^3.23.3"
   },
   "devDependencies": {
