--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@clerk/nextjs": "^5.3.3",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -28,6 +29,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.428.0",
     "next": ">=14.2.21",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
